--- a/main.html
+++ b/main.html
@@ -7,8 +7,13 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	
+	<p id="selector">Paragraph 1</p>
+	<p>Paragraph 2</p>
+	<p id="selector">Paragraph 3</p>
+	<p>Paragraph 4</p>
+    
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
