--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	
-	<p id="selector">Paragraph 1</p>
+	<p class="selector">Paragraph 1</p>
 	<p>Paragraph 2</p>
-	<p id="selector">Paragraph 3</p>
+	<p class="selector">Paragraph 3</p>
 	<p>Paragraph 4</p>
     
 	<script type="text/javascript" src="./script.js">
